// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Item Layout horizontal itemLayout List should accept extra node 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <ul
        class="ant-list-items"
      >
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://varnish.allenai.org"
                >
                  Varnish
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Varnish, a design language for background applications, is refined by Ant UED Team.
              </div>
            </div>
          </div>
          <ul
            class="ant-list-item-action"
          >
            <li>
              <a>
                Action
              </a>
            </li>
          </ul>
          <span>
            extra
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`List Item Layout rowKey could be function 1`] = `
<List
  dataSource={
    Array [
      Object {
        "id": 1,
        "title": "Varnish",
      },
      Object {
        "id": 2,
        "title": "Varnish",
      },
      Object {
        "id": 3,
        "title": "Varnish",
      },
    ]
  }
  renderItem={[Function]}
  rowKey={[Function]}
>
  <div
    className="ant-list ant-list-split"
  >
    <Spin
      size="default"
      spinning={false}
      wrapperClassName=""
    >
      <div
        className="ant-spin-nested-loading"
      >
        <div
          className="ant-spin-container"
          key="container"
        >
          <ul
            className="ant-list-items"
          >
            <Item>
              <li
                className="ant-list-item"
              >
                Varnish
              </li>
            </Item>
            <Item>
              <li
                className="ant-list-item"
              >
                Varnish
              </li>
            </Item>
            <Item>
              <li
                className="ant-list-item"
              >
                Varnish
              </li>
            </Item>
          </ul>
        </div>
      </div>
    </Spin>
  </div>
</List>
`;

exports[`List Item Layout rowKey could be string 1`] = `
<List
  dataSource={
    Array [
      Object {
        "id": 1,
        "title": "Varnish",
      },
      Object {
        "id": 2,
        "title": "Varnish",
      },
      Object {
        "id": 3,
        "title": "Varnish",
      },
    ]
  }
  renderItem={[Function]}
  rowKey="id"
>
  <div
    className="ant-list ant-list-split"
  >
    <Spin
      size="default"
      spinning={false}
      wrapperClassName=""
    >
      <div
        className="ant-spin-nested-loading"
      >
        <div
          className="ant-spin-container"
          key="container"
        >
          <ul
            className="ant-list-items"
          >
            <Item>
              <li
                className="ant-list-item"
              >
                Varnish
              </li>
            </Item>
            <Item>
              <li
                className="ant-list-item"
              >
                Varnish
              </li>
            </Item>
            <Item>
              <li
                className="ant-list-item"
              >
                Varnish
              </li>
            </Item>
          </ul>
        </div>
      </div>
    </Spin>
  </div>
</List>
`;

exports[`List Item Layout should render in RTL direction 1`] = `
<div
  class="ant-list ant-list-split ant-list-rtl"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <ul
        class="ant-list-items"
      >
        <li
          class="ant-list-item"
        >
          <div
            class="ant-list-item-meta"
          >
            <div
              class="ant-list-item-meta-content"
            >
              <h4
                class="ant-list-item-meta-title"
              >
                <a
                  href="https://varnish.allenai.org"
                >
                  Varnish
                </a>
              </h4>
              <div
                class="ant-list-item-meta-description"
              >
                Varnish, a design language for background applications, is refined by Ant UED Team.
              </div>
            </div>
          </div>
          <ul
            class="ant-list-item-action"
          >
            <li>
              <a>
                Action
              </a>
            </li>
          </ul>
          <span>
            extra
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
